# TurtleMail

./: README.md  main.py  messagelockig.html  signup.html  styles.css  test.py
PackagerFiles/: pyproject.toml
data/: db.json
templates/: homepage.html  login.html  message.html  new.html
